--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@bit/joshk.ng-spinners.spinner-loader": "^1.1.1",
     "@types/moment": "^2.13.0",
     "angular-hammer": "^2.2.0",
     "bootstrap": "^4.4.0",
